k8s/simplerest.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplerest
  labels:
    app: simplerest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simplerest
  template:
    metadata:
      labels:
        app: simplerest
    spec:
      containers:
      - name: simplerest
        image: codingpop/simplerest:v3
        ports:
        - containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: simplerest-service
spec:
  selector:
    app: simplerest
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
      nodePort: 30002
